tests/paczka1/fuzzy1/39346891.err
Error in line 1: ANk49ZX A544 97,3
Error in line 2: ANk49ZX A975 25,2
Error in line 5: YCJdVylQpZO A544 51,4
Error in line 11: ANk49ZX A975 36,01
Error in line 17: S283 A666 93,6
Error in line 13: cS4pqktI9Fq A975 67,8
Error in line 3: ANk49ZX S283 87,9
Error in line 15: XVwE A544 13,8
Error in line 25: ANk49ZX A666 26,6
Error in line 29: XVwE A666 -2,8
Error in line 23: cS4pqktI9Fq A544 94,3
Error in line 28: ANk49ZX A975 70,1
Error in line 34: ANk49ZX S283 55,8
